# KarsioVS

./: .gitignore  CMakeLists.txt  Karsio.sln  Karsio.vcxproj  Karsio.vcxproj.filters  README.md  Source.cpp
data/artwork/: Crystals.blend  Crystals.blend1  Vehicle-2018-02-21-2.blend  Vehicle-2018-03-14.blend
data/assets/: assetData.txt
data/assets/meshes/: .gitignore  chassis-lvl1.fbx  chassis-lvl1.mtl  chassis-lvl2.fbx  chassis-lvl2.mtl  chassis-lvl3.fbx  chassis-lvl3.mtl  chassis.mtl  crystalLarge-1.fbx  crystalSmall-1.fbx  cube.fbx  gun-lvl4.fbx  gun4.mtl  gunHolder-lvl1.fbx  gunHolder-lvl1.mtl  gunHolder-lvl2.fbx  gunHolder-lvl2.mtl  gunHolder-lvl3.fbx  gunHolder-lvl3.mtl  plane.fbx  ram-lvl3.fbx  ram-lvl3.mtl  ram-lvl5.fbx  ram5.mtl  smallCrystal1.mtl  tempCar.mtl  (+2 more)
data/shaderData/: fragment.glsl  vertex.glsl
src/: Karsio.sln  Karsio.vcxproj  Karsio.vcxproj.filters
src/Art/: MaterialData.cpp  MaterialData.h  MeshData.cpp  MeshData.h  ShaderData.cpp  ShaderData.h
src/Engine/: AudioEvent.cpp  AudioEvent.h  AudioObservable.cpp  AudioObservable.h  AudioObserver.cpp  AudioObserver.h  CollideEvent.cpp  CollideEvent.h  Component.cpp  Component.h  ComponentFactory.cpp  ComponentFactory.h  ComponentManager.cpp  ComponentManager.h  Core.cpp  Core.h  Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h  Event.cpp  Event.h  MeshManager.cpp  MeshManager.h  NullEvent.cpp  NullEvent.h  Observable.cpp  Observable.h  Observer.cpp  Observer.h  audiopaths.cpp  audiopaths.h
src/Game/: Camera.cpp  Camera.h  World.cpp  World.h
src/Main/: mainGame.cpp  mainGame.h
(+229 files in other folders)
